@@ -17,10 +17,23 @@ namespace Astroid {
     set_can_focus (true);
     add_events (Gdk::KEY_PRESS_MASK);
 
-    pack_start (paned, true, true, 5);
+    pack_start (paned, true, true, 0);
     paned.show_all ();
 
     keys.title = "Paned mode";
+    keys.register_key (Key (false, true, (guint) GDK_KEY_space), "pane.swap_focus",
+        "Swap focus to other pane if open",
+        [&] (Key) {
+          if (packed == 2) {
+            release_modal ();
+            current = (current == 0 ? 1 : 0);
+            grab_modal ();
+          }
+          return true;
+        });
+
+    /* color used for selected pane */
+    selected_color = Gdk::RGBA ("#4a90d9");
   }
 
   void PanedMode::add_pane (int p, Mode &w) {
@@ -36,32 +49,62 @@ namespace Astroid {
     else        pw2 = &w;
 
     Gtk::Widget * ww = &w;
+    Gtk::EventBox * fb = Gtk::manage (new Gtk::EventBox ());
 
-    if (p == 0)
-      paned.pack1 (*ww, true, false);
-    else
-      paned.pack2 (*ww, true, false);
+    fb->add (*ww);
+
+    fb->show_all ();
+
+    if (p == 0) {
+      fp1 = fb;
+      paned.pack1 (*fb, true, false);
+    } else {
+      fp2 = fb;
+      paned.pack2 (*fb, true, false);
+    }
 
     packed++;
+
+    if (packed > 1) {
+      pw1->set_margin_top (5);
+      pw2->set_margin_top (5);
+    }
 
     current = p;
   }
 
   void PanedMode::del_pane (int p) {
-    LOG (debug) << "pm: del pane";
+    LOG (debug) << "pm: del pane: " << p;
 
     if (p == current && has_modal) {
       release_modal ();
       current = -1;
+      has_modal = true;
     }
 
     if (p == 0) {
-      paned.remove (*pw1);
+      paned.remove (*fp1);
+
+      delete fp1;
+      delete pw1;
+
       pw1 = NULL;
+      fp1 = NULL;
       current = 1;
       packed--;
+      if (pw2 != NULL) {
+        pw2->set_margin_top (0);
+      }
     } else {
-      paned.remove (*pw2);
+      paned.remove (*fp2);
+      if (pw1 != NULL) {
+        pw1->set_margin_top (0);
+      }
+
+      delete fp2;
+      delete pw2;
+
+      fp2 = NULL;
       pw2 = NULL;
       current = 0;
       packed--;
@@ -69,9 +112,11 @@ namespace Astroid {
 
     if (packed < 1) {
       current = -1;
+      has_modal = false;
     } else {
-      if (has_modal)
+      if (has_modal) {
         grab_modal ();
+      }
     }
 
   }
@@ -80,9 +125,17 @@ namespace Astroid {
     //LOG (debug) << "pm: grab modal to: " << current;
     if (current == 0) {
       pw1->grab_modal ();
+      if (pw2 != NULL) {
+        fp1->override_background_color (selected_color, Gtk::StateFlags::STATE_FLAG_NORMAL);
+        fp2->override_background_color (Gdk::RGBA (), Gtk::StateFlags::STATE_FLAG_NORMAL);
+      }
       has_modal = true;
     } else if (current == 1) {
       pw2->grab_modal ();
+      if (pw1 != NULL) {
+        fp2->override_background_color (selected_color, Gtk::StateFlags::STATE_FLAG_NORMAL);
+        fp1->override_background_color (Gdk::RGBA (), Gtk::StateFlags::STATE_FLAG_NORMAL);
+      }
       has_modal = true;
     }
   }
