@@ -23,9 +23,6 @@ namespace Astroid {
       QueryLoader queryloader;
 
       void open_thread (refptr<NotmuchThread>, bool new_tab, bool new_window = false);
-      ThreadView * thread_view;
-      bool thread_view_loaded  = false;
-      bool thread_view_visible = false;
 
       Glib::RefPtr<ThreadIndexListStore> list_store;
       ThreadIndexListView * list_view;
